--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 arch: 
-  - amd64
+#  - amd64
   - ppc64le
 os: linux
 language: node_js
 node_js:
 #  - 'node' "not supported"
 #  - 'lts/*'  "not supported"
-  - '0.12'
-  - '0.10'
-jobs:
-  exclude:
-    - node_js: node
-      arch: ppc64le
-    - node_js: lts/*
-      arch: ppc64le
+#  - '0.12'
+#  - '0.10'
+   -  12
+   -  10
+   -  8
+   -  6
+   -  4
+#jobs:
+#  exclude:
+#    - node_js: node
+#      arch: ppc64le
+#    - node_js: lts/*
+#      arch: ppc64le
